Fixed: pagees are horizontally scrollable on iphone
This was because the nav iframe was too wide

--- a/css/common.css
+++ b/css/common.css
@@ -94,8 +94,8 @@ a.back:visited
 }
 
 .navbox iframe {
-    width: 450px;
-    height: 200px;
+    width: 100%;
+    height: 100px;
     border: 0;
 }
 
@@ -160,7 +160,7 @@ header
 
     section
     {
-        padding: 20pt 12pt 20pt 12pt;
-        margin: 36pt 0 36pt 0;
+        padding: 20pt 12pt;
+        margin: 36pt 0pt;
     }
 }
